--- a/package.json
+++ b/package.json
@@ -1,31 +1,17 @@
 {
-  "name": "node-js-getting-started",
+  "name": "salu",
   "version": "0.3.0",
   "description": "A sample Node.js app using Express 4",
-  "engines": {
-    "node": "8.9.1"
+  
+  "scripts":{
+  "start": "node server.js"
   },
-  "main": "index.js",
-  "scripts": {
-    "start": "node index.js",
-    "test": "node test.js"
+  
+  "dependencies":{
+  "express": "4.13.3"
   },
-  "dependencies": {
-    "ejs": "^2.5.6",
-    "express": "^4.15.2"
-  },
-  "devDependencies": {
-    "request": "^2.81.0",
-    "tape": "^4.7.0"
-  },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/heroku/node-js-getting-started"
-  },
-  "keywords": [
-    "node",
-    "heroku",
-    "express"
-  ],
+  
+  
+  "author":"salu"
   "license": "MIT"
 }
